--- a/package.json
+++ b/package.json
@@ -11,13 +11,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@testing-library/react": "^13.4.0",
-    "babel-jest": "^29.4.2",
-    "jest": "^29.4.2",
-    "jest-environment-jsdom": "^29.4.2",
     "parcel": "^2.8.2",
     "process": "^0.11.10"
   },
@@ -25,6 +18,7 @@
     "@reduxjs/toolkit": "^1.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0"
   }
